--- a/length list.ipynb
+++ b/length list.ipynb
@@ -2,41 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "2a6707a5-5b7f-4945-ab47-6f24bf6e66b5",
+   "execution_count": 27,
+   "id": "522d3348-e05a-4726-80e4-a494526f8941",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.99\n",
-      "20.97\n",
-      "2\n",
-      "20\n"
+      "4\n"
      ]
     }
    ],
    "source": [
-    "#Conversion Between Types\n",
-    "personal_apps = 0\n",
-    "personal_apps += 1.99\n",
-    "\n",
-    "gift_apps = 6.99\n",
-    "gift_apps *= 3 \n",
-    "\n",
-    "print(personal_apps)\n",
-    "print(gift_apps)\n",
-    "personal_apps = round(personal_apps)\n",
-    "gift_apps = int(gift_apps)\n",
-    "print(personal_apps)\n",
-    "print(gift_apps)"
+    "letters = [\"a\", \"b\", \"c\", \"d\"]\n",
+    "length = len(letters)\n",
+    "print(length)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dc284f6-8ef6-4219-a3fc-1e6d9ffd0ad8",
+   "id": "894221d4-9392-4f2b-8580-ea8093b3b99d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9c587bb-b1aa-4194-8a62-6aa93775b788",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26d67e45-5c79-44fd-b309-fa58c2003325",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46e96a2c-2a0f-48d7-8c15-f495f337aac1",
    "metadata": {},
    "outputs": [],
    "source": []
