--- a/list exercises.ipynb
+++ b/list exercises.ipynb
@@ -21,20 +21,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "894221d4-9392-4f2b-8580-ea8093b3b99d",
+   "cell_type": "markdown",
+   "id": "db8999a2-6a4a-4d8c-87a6-226f88d51a55",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## List Slicing"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e9c587bb-b1aa-4194-8a62-6aa93775b788",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6]\n",
+      "[0, 1, 2, 3, 4]\n",
+      "[7, 8, 9]\n",
+      "[7, 8, 9]\n",
+      "[1, 3, 5, 7]\n",
+      "[9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "print(numbers[2:7])  \n",
+    "print(numbers[:5])   \n",
+    "print(numbers[7:])   \n",
+    "print(numbers[-3:])  \n",
+    "print(numbers[1:8:2])  \n",
+    "print(numbers[::-1])  \n",
+    "copy_of_numbers = numbers[:]\n",
+    "print(copy_of_numbers) "
+   ]
   },
   {
    "cell_type": "code",
