--- a/list exercises.ipynb
+++ b/list exercises.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "522d3348-e05a-4726-80e4-a494526f8941",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
