--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9d2ea386-f4ce-4a60-b4e4-a85e93a96f12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "2897c719-96f6-4828-bae4-368ceed33f3d",
    "metadata": {},
@@ -39,6 +47,14 @@
     "    print(\"I know how to use while loops\")\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe8047d5-8fac-49a0-9411-aafde96b8a85",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -341,6 +357,677 @@
     "        \n",
     "avg_not_free = sum(not_free_games_social_ratings) / len(not_free_games_social_ratings)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5eb648a-7d74-4ba1-a280-3aac477147b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = -6\n",
+    "y = 14\n",
+    "z = 8.5\n",
+    "if x > z:\n",
+    "    print('x>z')\n",
+    "if y != z:\n",
+    "    print('y is not equal to z')\n",
+    "if x < z and z < y:\n",
+    "    print('z is between x and y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "54fe3424-7235-430a-a4cd-753c32663601",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 1, 'c': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {\"a\": 1, \"b\": 1, \"c\": 1} \n",
+    "print(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fec82341-51fd-429f-bd8b-ee0d60cb60c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 1\n",
+      "b 2\n",
+      "c 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "\n",
+    "for key in my_dict:\n",
+    "    value = my_dict[key]\n",
+    "    print(key, value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bd67051d-f6cb-4a7e-b1e7-a60e8d18690a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 1\n",
+      "b 2\n",
+      "c 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "\n",
+    "for key, value in my_dict.items():\n",
+    "    print(key, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e8287e24-f994-44bf-bde8-eeb49813bacd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b': 2, 'c': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "\n",
+    "my_dict.pop(\"a\")\n",
+    "\n",
+    "print(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "90db0289-4115-4945-981f-9f5f2168f8d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "value = my_dict.pop(\"d\", 0)\n",
+    "print(value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ce34ae0b-debf-4e84-b4ee-0e7a5d66f2f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b': 2, 'c': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "\n",
+    "del my_dict[\"a\"]\n",
+    "print(my_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "cc5e7237-b001-401b-92d8-d0de2e5a2914",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {\"a\": 1, \"b\": 2, \"c\": 3} \n",
+    "for v in my_dict.values(): \n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a8406cb0-f899-499d-a635-80a5cff54d71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "\n",
+    "v = list(my_dict.values())\n",
+    "\n",
+    "print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "6f33c070-64de-4d65-bb79-f36a0d7743b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 3, 2: 3, 3: 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = {\n",
+    "    1: 3,\n",
+    "    2: 3,\n",
+    "    3: 3\n",
+    "}\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "1d3d212a-24ff-409c-ba94-7b457eb20570",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 1\n",
+      "b 2\n",
+      "c 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "\n",
+    "for key, value in my_dict.items():\n",
+    "    print(key, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d6e5f329-a9a5-476c-abb2-6ee2bbcf5b6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Sayyorakhon\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Sayyorakhon\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter your name:\")\n",
+    "x = input()\n",
+    "print(\"Hello, \" + x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "4b7b5028-62a6-4c81-8a66-e66225b60f2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['welcome', 'to', 'the', 'jungle']\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"welcome to the jungle\"\n",
+    "\n",
+    "x = txt.split()\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "403befc6-afb1-4867-bc36-da5964f58aa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred!\n",
+      "This will be printed regardless.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "   # code that might cause an error\n",
+    "   result = 10 / 0\n",
+    "except:\n",
+    "   print(\"An error occurred!\")\n",
+    "\n",
+    "\n",
+    "print(\"This will be printed regardless.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "fa5620bd-268b-469f-8b2a-3f2044d7c1ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred: name 'a' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "   num1 = int(a)\n",
+    "   num2 = int(b)\n",
+    "   result = num1 / num2\n",
+    "except ValueError:\n",
+    "   print(\"Error: Invalid value!\")\n",
+    "except ZeroDivisionError:\n",
+    "   print(\"Error: Division by zero!\")\n",
+    "except Exception as error:\n",
+    "   print(\"An error occurred:\", error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "304d0ecc-e258-41e9-9e8f-f85f1a54cccd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1190605995.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[64], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    def sort(key=None, reverse=False):\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sort(key=None, reverse=False):\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "5d5b35a0-07f2-4ce0-9e52-225a1f52b913",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "elements = [5, 3, 6, 2, 1]\n",
+    "\n",
+    "elements.sort(key=None, reverse=True)\n",
+    "\n",
+    "print(elements) # [6, 5, 3, 2, 1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "56df085f-22c5-4703-8739-d0cc13eb048b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 3, 2, 1]\n",
+      "[6, 5, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "elements.sort(reverse=True)\n",
+    "print(elements)\n",
+    "elements = [5, 3, 6, 2, 1]\n",
+    "\n",
+    "elements.sort()\n",
+    "\n",
+    "elements.reverse()\n",
+    "print(elements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "82414d69-b60b-4c69-ac0e-ae629d9c56a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['kiwi', 'pear', 'apple', 'banana', 'cherry', 'blueberry', 'watermelon']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_word_length(word):\n",
+    "   return len(word)\n",
+    "words = [\"apple\", \"banana\", \"kiwi\", \"pear\", \"watermelon\", \"blueberry\", \"cherry\"]\n",
+    "words.sort(key=get_word_length)\n",
+    "print(words) # ['kiwi', 'pear', 'apple', 'banana', 'cherry', 'blueberry', 'watermelon']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "667dca2d-b212-4860-9c24-d16f696f1793",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['kiwi', 'pear', 'apple', 'banana', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_word_length(word):\n",
+    "   return len(word)\n",
+    "words = [\"apple\", \"banana\", \"kiwi\", \"pear\", \"cherry\"]\n",
+    "words.sort(key=get_word_length)\n",
+    "print(words) # ['kiwi', 'pear', 'apple', 'banana', 'cherry', 'blueberry', 'watermelon']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "1461dede-b8ca-437f-ae3f-af2a39b84ec2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['kiwi', 'pear', 'apple', 'banana', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = [\"apple\", \"banana\", \"kiwi\", \"pear\", \"cherry\"]\n",
+    "\n",
+    "words.sort(key=lambda word: len(word))\n",
+    "\n",
+    "print(words) # ['kiwi', 'pear', 'apple', 'banana', 'cherry', 'blueberry', 'watermelon']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "4b0a91d9-49c1-4d59-b79d-c8c719fce17b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry', 'kiwi', 'pear']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = [\"kiwi\", \"pear\", \"apple\", \"banana\", \"cherry\", ]\n",
+    "\n",
+    "sorted_words = sorted(words)\n",
+    "\n",
+    "print(sorted_words) # ['apple', 'banana', 'blueberry', 'cherry', 'kiwi', 'pear']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "5442eebd-f4b0-4369-a387-b4c8c8310a85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['kiwi', 'pear', 'apple', 'banana', 'cherry', 'blueberry', 'watermelon']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = [\"apple\", \"banana\", \"kiwi\", \"pear\", \"watermelon\", \"blueberry\", \"cherry\"]\n",
+    "\n",
+    "words.sort(key=lambda word: len(word))\n",
+    "print(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56e781a8-ce62-44b9-9398-1e87edd6fe67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = -6\n",
+    "y = 14\n",
+    "z = 8.5\n",
+    "if x > z:\n",
+    "    print('x>z')\n",
+    "if y != z:\n",
+    "    print('y is not equal to z')\n",
+    "if x < z and z < y:\n",
+    "    print('z is between x and y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77171fe7-3a4e-446a-9b57-f4dcd1f22d1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "n_apps_more_9 = 0\n",
+    "rating_sum = 0\n",
+    "n_apps_less_9 = 0\n",
+    "#print(apps_data[0])\n",
+    "for row in apps_data[1:]:\n",
+    "    price = float(row[4])\n",
+    "    rating = float(row[7])\n",
+    "    if price > 9.0:\n",
+    "        n_apps_more_9 += 1\n",
+    "        rating_sum += rating\n",
+    "    else:\n",
+    "        n_apps_less_9 += 1\n",
+    "\n",
+    "print(n_apps_more_9)\n",
+    "avg_rating = rating_sum / n_apps_more_9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "456b1276-5b34-4951-b523-e104117b7b3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "\n",
+    "for app in apps_data[1:]:\n",
+    "    price = float(app[4])\n",
+    "    # Complete code from here\n",
+    "    if price == 0.0:\n",
+    "        app.append('free')\n",
+    "    else:\n",
+    "        app.append('not free')\n",
+    "apps_data[0].append('free_or_not')\n",
+    "print(apps_data[:6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a6df386-d23f-473e-9e1b-65b852b94765",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_ratings = [['Facebook', 3.5], ['Notion', 4.0], ['Astropad Standard', 4.5], ['NAVIGON Europe', 3.5]]\n",
+    "for app in app_ratings:\n",
+    "    rating = app[1]\n",
+    "    if rating < 3.0:\n",
+    "        app.append('below average')\n",
+    "    elif rating >= 3.0 and rating < 4.0:\n",
+    "        app.append('roughly average')\n",
+    "    elif rating >= 4.0:\n",
+    "        app.append('better than average')\n",
+    "print(app_ratings)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e8d1c77-9ab5-4965-8c4a-e5429354084b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "\n",
+    "for app in apps_data[1:]:\n",
+    "    price = float(app[4])\n",
+    "    # Complete code from here\n",
+    "    if price == 0:\n",
+    "        app.append('free')\n",
+    "    elif price > 0 and price < 20:\n",
+    "        app.append('affordable')\n",
+    "    elif price >= 20 and price < 50:\n",
+    "        app.append('expensive')\n",
+    "    elif price >= 50:\n",
+    "        app.append('very expensive')\n",
+    "apps_data[0].append('price_label')\n",
+    "print(apps_data[:6])\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06eef8e0-2dfc-4a99-9fce-fddf1882903d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d991465d-1d4e-455b-bcc0-da56e2832b03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3a09c38-7cac-41e7-b2c6-62c2cec853bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c7dda70-0e2f-4983-a178-81e56afdfa03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
