--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -1003,7 +1003,11 @@
    "id": "06eef8e0-2dfc-4a99-9fce-fddf1882903d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "content_ratings = ['4+', '9+', '12+', '17+']\n",
+    "numbers = [4433, 987, 1155, 622]\n",
+    "content_rating_numbers = [['4+', '9+', '12+', '17+'], [4433, 987, 1155, 622]]\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1011,7 +1015,10 @@
    "id": "d991465d-1d4e-455b-bcc0-da56e2832b03",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "content_ratings = {'4+': 4433, '9+': 987, '12+': 1155, '17+':622}\n",
+    "print(content_ratings)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1019,12 +1026,168 @@
    "id": "c3a09c38-7cac-41e7-b2c6-62c2cec853bc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "content_ratings = {'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}\n",
+    "over_9 = (content_ratings['9+'])\n",
+    "over_17 = (content_ratings['17+'])\n",
+    "print(over_9)\n",
+    "print(over_17)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6c7dda70-0e2f-4983-a178-81e56afdfa03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content_ratings = {}\n",
+    "content_ratings['12+'] = 1155\n",
+    "content_ratings['17+'] = 622\n",
+    "content_ratings['4+'] = 4433\n",
+    "content_ratings['9+'] = 987\n",
+    "over_12_n_apps = content_ratings['12+']\n",
+    "print(over_12_n_apps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47e19871-dcbb-4e09-a143-59929ca4b10d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error = True\n",
+    "print(error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3327edc8-da6e-440e-bfda-7394cf365c45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_1 = {'key_1': 'first_value', \n",
+    "       'key_2': 2,\n",
+    "       'key_3': 3.14,\n",
+    "       'key_4': True,\n",
+    "       'key_5': [4,2,1],\n",
+    "       'key_6': {'inner_key' : 6}}\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8c6132fa-a448-43ba-95d0-da42dec15684",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "-575050039314297816\n",
+      "737869762948381699\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hash(4))\n",
+    "print(hash('four'))\n",
+    "print(hash(3.32))\n",
+    "print(hash(True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ee179fe1-6593-4dd6-87c6-605f39b718ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "content_ratings = {'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}\n",
+    "\n",
+    "print(4433 in content_ratings)\n",
+    "print(987 in content_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccc65b15-6f62-4a8a-9020-55ac59ebdb93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content_ratings = {'4+': 4433, '9+': 987, '12+': 1155, '17+': 622}\n",
+    "is_in_dictionary_1 =  True\n",
+    "is_in_dictionary_2 =  False\n",
+    "print('9+' in content_ratings)\n",
+    "print(987 in content_ratings)\n",
+    "if '17+' in content_ratings:\n",
+    "    result = \"It exists\" \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3a25afd-8f05-4700-a9b8-fc5f0556d5ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content_ratings = {'4+': 622, '12+': '1155', '9+': 987, '17+': 4433}\n",
+    "temp = content_ratings['4+']\n",
+    "content_ratings['4+'] = content_ratings['17+']\n",
+    "content_ratings['17+'] = temp\n",
+    "content_ratings['12+'] = int(content_ratings['12+'])\n",
+    "print(content_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56c10cef-b7a2-4cc3-beef-6b58ecf18e85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "content_ratings = {'4+': 0, '9+': 0, '12+': 0, '17+': 0}\n",
+    "\n",
+    "for row in apps_data[1:]:\n",
+    "    c_rating = row[10]\n",
+    "    if c_rating in content_ratings:\n",
+    "        content_ratings[c_rating] += 1\n",
+    "        \n",
+    "print(content_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "408f8c7f-2d71-4eb4-b2c5-71fcc7d3ca16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4b054a3-5526-499d-890e-2bc7c27e4122",
    "metadata": {},
    "outputs": [],
    "source": []
