--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -1182,12 +1182,172 @@
    "id": "408f8c7f-2d71-4eb4-b2c5-71fcc7d3ca16",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "content_ratings = {'4+': 4433, '12+': 1155, '9+': 987, '17+': 622}\n",
+    "total_number_of_apps = 7197\n",
+    "for i in content_ratings:\n",
+    "    content_ratings[i] /= total_number_of_apps\n",
+    "    content_ratings[i] *= 100\n",
+    "print(i)\n",
+    "percentage_17_plus = content_ratings['17+']\n",
+    "percentage_15_allowed = 100 - percentage_17_plus\n",
+    "print(percentage_15_allowed)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a4b054a3-5526-499d-890e-2bc7c27e4122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content_ratings = {'4+': 4433, '12+': 1155, '9+': 987, '17+': 622}\n",
+    "total_number_of_apps = 7197\n",
+    "c_ratings_proportions = {}\n",
+    "\n",
+    "for key in content_ratings:\n",
+    "    proportion = (content_ratings[key] / total_number_of_apps)     \n",
+    "    c_ratings_proportions[key] = proportion\n",
+    "\n",
+    "print(c_ratings_proportions)\n",
+    "print(content_ratings)\n",
+    "Output\n",
+    "{'4+': 0.6159510907322495, '12+': 0.16048353480616923, \n",
+    " '9+': 0.13714047519799916, '17+': 0.08642489926358204}\n",
+    "{'4+': 4433, '12+': 1155, '9+': 987, '17+': 622}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37cad5ff-e380-4534-9429-35000d7ca56a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content_ratings = {'4+': 4433, '12+': 1155, '9+': 987, '17+': 622}\n",
+    "total_number_of_apps = 7197\n",
+    "c_ratings_proportions = {}\n",
+    "c_ratings_percentages = {}\n",
+    "for key in content_ratings:\n",
+    "    proportion = (content_ratings[key] / total_number_of_apps)     \n",
+    "    c_ratings_proportions[key] = proportion\n",
+    "    c_ratings_percentages[key] = proportion * 100\n",
+    "print(c_ratings_proportions)\n",
+    "print(c_ratings_percentages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6d83e58-2283-4b63-acd3-a0d311dea854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size_freq = {}\n",
+    "\n",
+    "for row in apps_data[1:]:\n",
+    "    size = row[2]\n",
+    "\n",
+    "    if size in size_freq:\n",
+    "        size_freq[size] +=1\n",
+    "    else:\n",
+    "        size_freq[size] = 1\n",
+    "\n",
+    "print(len(size_freq))\n",
+    "print(size_freq)\n",
+    "Output\n",
+    "7107\n",
+    "{'389879808': 1, '113954816': 1, '116476928': 1, \n",
+    " '65921024': 1, '130242560': 1, '74778624': 1, ...}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac4a8d16-d277-44e4-961c-68a7cc092c66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "data_sizes = []\n",
+    "for row in apps_data[1:]:\n",
+    "    size = float(row[2])\n",
+    "    data_sizes.append(size)\n",
+    "min_size = min(data_sizes)\n",
+    "max_size = max(data_sizes)\n",
+    "print(min_size)\n",
+    "print(max_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d74b370a-5ea8-489c-a292-e6d250f4184a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c9e043f4-f06f-4376-93ae-73b9b6086a1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'0 - 10 MB': 0, '10 - 50 MB': 0, '50 - 100 MB': 0, '100 - 500 MB': 0, '500 MB +': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_sizes = {'0 - 10 MB': 0, '10 - 50 MB': 0, '50 - 100 MB': 0,\n",
+    "                    '100 - 500 MB': 0, '500 MB +': 0}\n",
+    "print(data_sizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59c9ccac-8da4-402b-b0b9-4c72a3b2d7a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "rating_count_tot = {}\n",
+    "for row in apps_data[1:]:\n",
+    "    rating_count_tot = float(row[5])\n",
+    "    if rating_count_tot <= 1000000:\n",
+    "        rating_count_tot['0 - 10 MB'] += 1\n",
+    "    elif 10000000 < rating_count_tot <= 50000000:\n",
+    "        rating_count_tot['10 - 50 MB'] += 1\n",
+    "    elif 50000000 < rating_count_tot <= 100000000:\n",
+    "        rating_count_tot['50 - 100 MB'] += 1\n",
+    "    elif 100000000 < rating_count_tot <= 500000000:\n",
+    "        rating_count_tot['100 - 500 MB'] += 1\n",
+    "    elif rating_count_tot > 500000000:\n",
+    "        rating_count_tot['500 MB +'] += 1\n",
+    "    \n",
+    "print(min(rating_count_tot))\n",
+    "print(max(rating_count_tot))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52e87e36-969e-45b2-82b7-5e4f3e8c1b8a",
    "metadata": {},
    "outputs": [],
    "source": []
