--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -1346,8 +1346,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "52e87e36-969e-45b2-82b7-5e4f3e8c1b8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('John', 'Jenny'), ('Charles', 'Christy'), ('Mike', 'Monica'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (\"John\", \"Charles\", \"Mike\")\n",
+    "b = (\"Jenny\", \"Christy\", \"Monica\")\n",
+    "x = zip(a, b)\n",
+    "print(tuple(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1323334-f4bd-4074-990a-538eb0bd8cb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_list = [4444, 8897, 6340, 9896, 4835, 4324, 10, 6445,\n",
+    "          661, 1246, 1000, 7429, 1376, 8121, 647, 1280,\n",
+    "          3993, 4881, 9500, 6701, 1199, 6251, 4432, 37]\n",
+    "sum_manual = 0\n",
+    "for i in a_list :\n",
+    "    sum_manual += i\n",
+    "    \n",
+    "print(sum_manual)\n",
+    "print(sum(a_list))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df15e5ca-5710-4dd2-8d03-3d6683546349",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings = ['4+', '4+', '4+', '9+', '12+', '12+', '17+', '17+']\n",
+    "content_ratings = {}\n",
+    "for i in ratings:\n",
+    "    if i in content_ratings:\n",
+    "        content_ratings[i] += 1\n",
+    "    else:\n",
+    "        content_ratings[i] = 1\n",
+    "print(content_ratings)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "74beb5ba-20a3-4e9c-865a-d7f02b996a0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "July 15, 2006\n",
+      "February 4, 2004\n",
+      "June 9, 1949\n"
+     ]
+    }
+   ],
+   "source": [
+    "def date(month, day, year):\n",
+    "    return month + \" \" + str(day)+ \", \" + str(year)\n",
+    "print(date(\"July\", 15, 2006))\n",
+    "print(date(\"February\", 4, 2004))\n",
+    "print(date(\"June\", 9, 1949))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "71bff0d2-5e74-4b8c-aec2-1ae9933249d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n",
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square(a_number):\n",
+    "    squared_number = a_number * a_number\n",
+    "    return squared_number\n",
+    "    \n",
+    "print(square(6))\n",
+    "print(square(7))\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e68439a-7277-45b2-baf5-b3e76e149a5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content_ratings = {}\n",
+    "ratings = ['4+', '4+', '4+', '9+', '9+', '12+', '17+']\n",
+    "\n",
+    "for c_rating in ratings:\n",
+    "    if c_rating in content_ratings:\n",
+    "        content_ratings[c_rating] += 1\n",
+    "    else:\n",
+    "        content_ratings[c_rating] = 1\n",
+    "\n",
+    "print(content_ratings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48d85a0d-3cf6-4974-9c58-b95f5ccdad47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "\n",
+    "def extract(index):\n",
+    "    column = []    \n",
+    "    for row in apps_data[1:]:\n",
+    "        value = row[index]\n",
+    "        column.append(value)    \n",
+    "    return column\n",
+    "\n",
+    "genres = extract(11)\n",
+    "def freq_table(full):\n",
+    "    f_table = {}\n",
+    "    for i in full:\n",
+    "        if i in f_table:\n",
+    "            f_table[i] += 1\n",
+    "        else:\n",
+    "            f_table[i] = 1\n",
+    "    return f_table\n",
+    "genres_ft = freq_table(genres)\n",
+    "print(extract)\n",
+    "print(freq_table)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f74ac14e-721d-4164-85ad-0ec257442de2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c713a86c-b6e7-4ca0-96bc-7867d47e92df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "182959e9-49bb-4d83-ae28-6d8e1e083b7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c42ed148-4656-4191-a8d2-250e9ca1c2ca",
    "metadata": {},
    "outputs": [],
    "source": []
