--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -1510,7 +1510,25 @@
    "id": "f74ac14e-721d-4164-85ad-0ec257442de2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "def freq_table(index):\n",
+    "    frequency_table = {}\n",
+    "    \n",
+    "    for row in apps_data[1:]:\n",
+    "        value = row[index]\n",
+    "        if value in frequency_table:\n",
+    "            frequency_table[value] += 1\n",
+    "        else:\n",
+    "            frequency_table[value] = 1\n",
+    "            \n",
+    "    return frequency_table\n",
+    "ratings_ft = freq_table(7)\n",
+    "print(ratings_ft)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1518,12 +1536,191 @@
    "id": "c713a86c-b6e7-4ca0-96bc-7867d47e92df",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "\n",
+    "def freq_table(data_set, index):\n",
+    "    frequency_table = {}\n",
+    "    \n",
+    "    for row in data_set[1:]:\n",
+    "        value = row[index]\n",
+    "        if value in frequency_table:\n",
+    "            frequency_table[value] += 1\n",
+    "        else:\n",
+    "            frequency_table[value] = 1\n",
+    "        \n",
+    "    return frequency_table\n",
+    "content_ratings_ft = freq_table(apps_data, 10)\n",
+    "ratings_ft = freq_table(apps_data , 7)\n",
+    "genres_ft = freq_table(apps_data, 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "182959e9-49bb-4d83-ae28-6d8e1e083b7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_sum(a_list):\n",
+    "    a_sum = 0\n",
+    "    for element in a_list:\n",
+    "        a_sum += float(element)\n",
+    "    return a_sum\n",
+    "\n",
+    "def find_length(a_list):\n",
+    "    length = 0\n",
+    "    for element in a_list:\n",
+    "        length += 1\n",
+    "    return length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b626345-ae94-429c-b78d-dab0753c88a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opened_file = open('AppleStore.csv')\n",
+    "from csv import reader\n",
+    "read_file = reader(opened_file)\n",
+    "apps_data = list(read_file)\n",
+    "\n",
+    "def extract(data_set, index):\n",
+    "    column = []    \n",
+    "    for row in data_set[1:]:\n",
+    "        value = row[index]\n",
+    "        column.append(value)    \n",
+    "    return column\n",
+    "\n",
+    "def find_sum(a_list):\n",
+    "    a_sum = 0\n",
+    "    for element in a_list:\n",
+    "        a_sum += float(element)\n",
+    "    return a_sum\n",
+    "\n",
+    "def find_length(a_list):\n",
+    "    length = 0\n",
+    "    for element in a_list:\n",
+    "        length += 1\n",
+    "    return length\n",
+    "def mean(data_set, index):\n",
+    "    i = extract(data_set, index)\n",
+    "    a = find_sum(i)\n",
+    "    b = find_length(i)\n",
+    "    c = a / b\n",
+    "    return c\n",
+    "avg_price = mean(apps_data, 4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "bc4f8c01-5437-4bd8-913e-307bcd8a1989",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.4\n",
+      "0.23\n",
+      "921.22252\n"
+     ]
+    }
+   ],
+   "source": [
+    "one_decimal = round(3.43, 1)\n",
+    "two_decimals = round(0.23321, 2 )\n",
+    "five_decimals = round(921.2225227, 5)\n",
+    "print(one_decimal)\n",
+    "print(two_decimals)\n",
+    "print(five_decimals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d19d15f4-740c-4c44-9659-cbe70859d3f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def open_dataset(file_name = 'AppleStore.csv' ):\n",
+    "    \n",
+    "    opened_file = open(file_name)\n",
+    "    from csv import reader\n",
+    "    read_file = reader(opened_file)\n",
+    "    data = list(read_file)\n",
+    "    \n",
+    "    return data\n",
+    "apps_data = open_dataset()\n",
+    "print(apps_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0c8e2d8-9185-4465-9bb2-16eef06b2089",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "182959e9-49bb-4d83-ae28-6d8e1e083b7b",
+   "id": "dfb1a703-26f1-4c78-b374-52a6ae624489",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec5688bc-2ed0-4cca-9eb7-53ee67ef1e95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1089a75d-e481-472e-9f9b-c95a5e51011d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07903fc1-932f-43a5-a01b-13eeb44bd7b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f5a1e52-844a-48d8-8938-c3b7de143175",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d9c6015-5731-4977-b9f2-197692bf4f2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90cdf354-571b-4f97-a7e6-327f1b489bc4",
    "metadata": {},
    "outputs": [],
    "source": []
